Revise compile and run instructions for JavaFX
Updated instructions for compiling and running the JavaFX project, including requirements and VM options.